# eventrist

./: .gitignore  README.md  app.py  csv_to_json.py  docker-compose.yml  pyproject.toml  test_data.py
server/: Dockerfile  account.yaml  app.py  csv_importer.py  pyproject.toml  test_data.py
server-next/: README.md  main.py  requirements.txt  toast.yml
webapp/: package-lock.json  package.json
webapp/public/: index.html
webapp/src/: App.svelte  Controller.svelte  MyChart.svelte  Selector.svelte  Stores.js  util.js
