[tool.poetry]
name = "eventrist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.49.0"
influxdb = "^5.2.3"
uvicorn = "^0.11.3"
gunicorn = "^20.0.4"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
